<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".LoginActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:src="@drawable/splash" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:padding="@dimen/_15sdp"
            android:text="@string/login"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />



            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textColor="@color/colorPrimary" />





            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimary" />



        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:padding="15sp"
            android:text="@string/forgot_password"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            android:background="@drawable/bg_primary_solid_5dp"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvAfterVerify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:paddingLeft="25dp"
            android:paddingTop="5dp"
            android:paddingRight="25dp"
            android:paddingBottom="5dp"
            android:text="Click me after verify"
            android:textColor="@android:color/white"
            android:textSize="14dp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvVerify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15sp"
            android:text="@string/please_verify_your_email_address"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="14dp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvStrictVerify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15sp"
            android:text="@string/i_strictly_warn_you_please_verify_your_email_address_other_your_account_will_be_blocked_for_me"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvRegisterNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15sp"
            android:text="@string/not_a_account_register_now"
            android:textColor="@color/colorPrimary"
            android:textSize="14dp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>